--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,8 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="10dp"
-        android:text="Создать"
         android:layout_width="0dp"
-        android:layout_height="60dp"/>
+        android:layout_height="60dp"
+        android:onClick="OpenNote"
+        android:text="Создать" />
 </androidx.constraintlayout.widget.ConstraintLayout>
