--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -28,16 +28,15 @@
         android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="0dp"/>
+
     <Button
         android:id="@+id/buttun2"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="10dp"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
         android:background="#ffffff"
         android:backgroundTint="#ffffff"
         android:fallbackLineSpacing="false"
+        android:onClick="AddNote"
         android:text="Создать"
-        android:textColor="#F1B130"
-        android:layout_width="0dp"
-        android:layout_height="60dp"/>
+        android:textColor="#F1B130" />
 </androidx.constraintlayout.widget.ConstraintLayout>
