--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1b130">
 
     <EditText
         android:id="@+id/editTextTextPersonName"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#ffffff"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <MultiAutoCompleteTextView
         android:id="@+id/multiAutoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="70dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"
-        android:background="#ffffff"
-        android:backgroundTint="#ffffff"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         android:textAllCaps="false"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <Button
-        android:id="@+id/buttun2"
-        android:layout_width="0dp"
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="#ffffff"
-        android:backgroundTint="#ffffff"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
         android:fallbackLineSpacing="false"
         android:onClick="AddNote"
         android:text="Создать"
-        android:textColor="#F1B130" />
+        android:textColor="#F1B130"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
